<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_commands</name>
  <version>0.0.0</version>
  <description>Package to publish data from Arduino via USB</description>
  
  <!-- Information du mainteneur et licence -->
  <maintainer email="xplore@todo.todo">xplore</maintainer>
  <license>Apache-2.0</license> <!-- Remplace par la licence appropriée -->

  <!-- Dépendances d'exécution -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dépendances de build -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ament_python</build_depend>
  
  <!-- Dépendances de test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- Exportation du type de build -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
